<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="s_no_records">No records</string>
    <string name="s_picture_take">Take photo</string>
    <string name="s_picture_choice">Choice image</string>
    <string name="s_picture_clear">Clear image</string>
    <string name="s_pref_deleteevent_title">Delete record</string>
    <string name="s_pref_deleteevent_summary">Delete record after import from Download folder</string>
    <string name="s_no_event_to_import">No records to import</string>
    <string name="s_import_select">Select record to import</string>
    <string name="s_menu_import">Import record</string>
    <string name="s_import_qwe">Import a record ?</string>
    <string name="s_more">Menu</string>
    <string name="s_export">Export record</string>
    <string name="s_scanner_not_installed">Barcode Scanner not installed</string>
    <string name="s_send_report">Share with friends</string>
    <string name="s_event_report_subject">Wine Memo - </string>
    <string name="s_forbilden_wo_pic">Nothing to send - no picture</string>
    <string name="s_app_name">Wine Memo</string>
    <string name="s_filename_DB">DB filename</string>
    <string name="s_search">Search</string>
    <string name="s_options">Database export and import</string>
    <string name="s_backupDB">Export database</string>
    <string name="s_restoreDB">Import database</string>
    <string name="s_add">Add</string>
    <string name="s_save">Save</string>
    <string name="s_pref">Setting</string>
    <string name="s_edit">Edit</string>
    <string name="s_order">Sort</string>
    <string name="s_delete">Delete</string>
    <string name="s_help">Help</string>
    <string name="s_scanner">Code scanner</string>
    <string name="s_share">Share</string>
    <string name="s_startcopying">Start operation</string>
    <string name="s_diagramm">Diagramm</string>
    <string name="s_ok">Select</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_image">Image</string>
    <string name="s_delete_record">Delete record ?</string>
    <string name="s_confirm_request">confirmation required</string>
    <string name="s_settings">Setting</string>
    <string name="s_wait">Wait, please</string>
    <string name="s_loadimages">Upload images</string>
    <string name="s_refresh_dictionary">Dictionary updating</string>
    <string name="s_db_recovery">Database is corrupted. Restoring the database from etalon</string>
    <string name="s_access_folder_error">No access to upload folder  </string>
    <string name="s_exit_wo_save">Exit without save?</string>
    <string name="s_yes">YES</string>
    <string name="s_no">NO</string>
    <string name="s_no_folder_to_load">No folders to import database</string>
    <string name="s_restoreDB_choice">Choice database to import</string>
    <string name="s_loaded">uploaded</string>
    <string name="s_unloaded">unloaded</string>
    <string name="s_exit_appl">Close application?</string>
    <string name="s_pref_picturebig_title">Image sizes</string>
    <string name="s_pref_picturebig_summary">Set image size to save</string>
    <string name="s_pref_picturesmall_title">thumbnail size</string>
    <string name="s_pref_picturesmall_summary">Set thumbnail size to save</string>
    <string name="s_pref_picture_bgr_title">Image background color</string>
    <string name="s_pref_picture_bgr_summary">Set image background color (black, gray, white)</string>
    <string name="s_pref_choice_allfield_title">Search mode</string>
    <string name="s_pref_choice_allfield_summary">Uncheck - only search by name, check - all fields search</string>
    <string name="s_pref_animation_title">Animation</string>
    <string name="s_pref_animation_summary">Select slide screen animation effect</string>
    <string name="s_prepare_to_share">Published by WineMemo by DroidWelt</string>
    <string name="s_scan_not_in_db">No object in your database</string>
    <string name="s_scan_ok">OK</string>
    <string name="s_scan_dlg_title">Search</string>
    <string name="s_scan_dlg_code">Code</string>
    <string name="s_scan_dlg_search_web">Code not found in your DB. Search the Internet?  </string>
    <string name="s_scan_dlg_no_code">Code not found in your DB</string>
    <string name="s_no_request_image_from_gallery_7">[7] Could not get a picture from the gallery. Try again . . .  </string>
    <string name="s_no_prepate_after_crop_5">[5] Could not get the picture after cropping (insufficient memory). Try again  . . .  </string>
    <string name="s_tv0">tv0</string>
    <string name="s_tv1">tv1</string>
    <string name="s_tv2">tv2</string>
    <string name="s_about_version">version X.X, build YYY</string>
    <string name="s_about_dbsize">records NNNN, KKKMb</string>
    <string name="s_about_prog">Wine Memo - mobile wine notes</string>
    <string name="s_about_prog2">www.altamix.ru</string>
    <string name="s_about">About application</string>
    <string name="s_about_copyright">2014–2017 © DroidWelt</string>
    <string name="s_about_records">records</string>
    <string name="s_fld_name">Wine name</string>
    <string name="s_fld_tip">Type</string>
    <string name="s_fld_country">Country</string>
    <string name="s_fld_region">Appellation</string>
    <string name="s_fld_contens">Grape Variety(ies)</string>
    <string name="s_fld_firma">Winery</string>
    <string name="s_fld_god">Vintage</string>
    <string name="s_fld_emk">Bottle capacity</string>
    <string name="s_fld_alk">Alcohol, %</string>
    <string name="s_fld_sug">Sugar, g/l</string>
    <string name="s_fld_cena">Price</string>
    <string name="s_fld_comment">Notes</string>
    <string name="s_fld_rating">Rating</string>
    <string name="s_fld_date">Date</string>
    <string name="s_fld_barcode">Scan-code</string>
    <string name="s_sug_contain">g/l</string>
    <string name="s_not_class">not classified</string>
    <string name="s_title_activity_diagramm">Diagramm</string>

    <string name="s_privacy">Privacy Policy for Mobile Application Wine Memo</string>
    <string name="s_privacy_link">http://altamix.ru/MyPage/Privacy.aspx</string>

    <string name="s_toastPicture" tools:ignore="MissingTranslation">ToastPicture</string>
    <string name="s_customToast" tools:ignore="MissingTranslation">Custom Toast</string>


</resources>