<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".database.Restore_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/s_restoreDB"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/wait_operation_pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="12dp"
        android:indeterminate="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/button_Cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s_cancel"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_Ok"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_startcopying" />
    </LinearLayout>

    <TextView
        android:id="@+id/restore_filename"
        style="@style/Style_EditText"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/c_highlight"
        android:padding="12dp"
        android:text="@string/s_restoreDB_choice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/download_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>