<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".main_UI.View_Activity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:contentInsetStart="0dp"
            app:title=" ">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/c_transparent"
                android:elevation="1dp"
                app:srcCompat="@drawable/ic_launcher"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/s_app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="RtlSymmetry" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ru.droidwelt.winememo.common.ExtendedViewPager
            android:id="@+id/view_graphic"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/s_image"
            android:elevation="1dp">

        </ru.droidwelt.winememo.common.ExtendedViewPager>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/view_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:clickable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:selectAllOnFocus="false"
                    android:text="@string/s_tv0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/view_rating"
                    android:layout_width="60dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/s_fld_rating"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_rating_0" />

                <TextView
                    android:id="@+id/view_label1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/s_tv1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_label2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/s_tv2"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>