<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="?android:attr/activatedBackgroundIndicator"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <ImageView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="0"
                        android:contentDescription="@string/s_image"
                        android:elevation="1dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_240"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/main_item_graphic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:contentDescription="@string/s_image"
                        android:elevation="2dp"
                        android:minHeight="240dp"
                        android:minWidth="90dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_empty_picture"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="1dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/main_item_name"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/c_bgr_text"
                            android:text="@string/s_tv0"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_item_tv1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/s_tv1"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_item_tv2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s_tv2" />

                        <ImageView
                            android:id="@+id/main_item_rating"
                            android:layout_width="60dp"
                            android:layout_height="0dp"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/s_image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_rating_0" />

                    </LinearLayout>
                </LinearLayout>





    </android.support.v7.widget.CardView>
</LinearLayout>
